// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assigning elements 1`] = `
{
  "line": 0,
  "nodes": [
    {
      "attributeBlocks": [],
      "attrs": [],
      "block": {
        "line": 1,
        "nodes": [
          {
            "column": 7,
            "line": 1,
            "type": "Text",
            "val": "Hello = () =>",
          },
          {
            "block": {
              "line": 3,
              "nodes": [
                {
                  "attributeBlocks": [],
                  "attrs": [
                    {
                      "column": 10,
                      "line": 3,
                      "mustEscape": false,
                      "name": "class",
                      "val": "'hello'",
                    },
                  ],
                  "block": {
                    "line": 3,
                    "nodes": [
                      {
                        "column": 11,
                        "line": 4,
                        "type": "Text",
                        "val": "World",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 7,
                  "isInline": false,
                  "line": 3,
                  "name": "div",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "buffer": false,
            "column": 5,
            "isInline": false,
            "line": 2,
            "mustEscape": false,
            "type": "Code",
            "val": "const foo =",
          },
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 8,
                "line": 6,
                "mustEscape": false,
                "name": "class",
                "val": "'hello'",
              },
            ],
            "block": {
              "line": 6,
              "nodes": [
                {
                  "attributeBlocks": [],
                  "attrs": [
                    {
                      "column": 17,
                      "line": 7,
                      "mustEscape": true,
                      "name": "name",
                      "val": "foo",
                    },
                  ],
                  "block": {
                    "line": 7,
                    "nodes": [],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 7,
                  "name": "SomeTag",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 6,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "const",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Assigning elements 2`] = `
{
  "errors": [],
  "result": "/*@pug:L1*/ <const>
  Hello = () =>
  {(() => {
    /*@pug:L2*/
    const foo = /*@pug:L3*/ <div className={"hello"}>World</div>;
    return (
      /*@pug:L6*/ <div className={"hello"}>
        {" "}
        /*@pug:L7*/<SomeTag name={foo}></SomeTag>
      </div>
    );
  })()}
</const>;
",
}
`;

exports[`Interleaved unbuffered code 1`] = `
{
  "line": 0,
  "nodes": [
    {
      "attributeBlocks": [],
      "attrs": [],
      "block": {
        "line": 1,
        "nodes": [
          {
            "column": 7,
            "line": 1,
            "type": "Text",
            "val": "Hello = () =>",
          },
          {
            "buffer": false,
            "column": 5,
            "isInline": false,
            "line": 2,
            "mustEscape": false,
            "type": "Code",
            "val": "const foo = "bar";",
          },
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 5,
                "line": 3,
                "mustEscape": false,
                "name": "id",
                "val": "'bar'",
              },
              {
                "column": 9,
                "line": 3,
                "mustEscape": false,
                "name": "class",
                "val": "'foo'",
              },
            ],
            "block": {
              "line": 3,
              "nodes": [
                {
                  "attributeBlocks": [],
                  "attrs": [
                    {
                      "column": 9,
                      "line": 4,
                      "mustEscape": false,
                      "name": "class",
                      "val": "'foo__node'",
                    },
                    {
                      "column": 19,
                      "line": 4,
                      "mustEscape": false,
                      "name": "class",
                      "val": "'foo__node--aspect'",
                    },
                  ],
                  "block": {
                    "line": 4,
                    "nodes": [
                      {
                        "column": 38,
                        "line": 4,
                        "type": "Text",
                        "val": "Test",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 4,
                  "name": "div",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 3,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
          {
            "buffer": false,
            "column": 5,
            "isInline": false,
            "line": 5,
            "mustEscape": false,
            "type": "Code",
            "val": "const bar = "baz";",
          },
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 8,
                "line": 6,
                "mustEscape": false,
                "name": "class",
                "val": "'hello'",
              },
            ],
            "block": {
              "line": 6,
              "nodes": [
                {
                  "buffer": true,
                  "column": 9,
                  "isInline": false,
                  "line": 7,
                  "mustEscape": true,
                  "type": "Code",
                  "val": "\`Hello \\\${foo} \\\${bar}\`",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 6,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "const",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Interleaved unbuffered code 2`] = `
{
  "errors": [],
  "result": "/*@pug:L1*/ <const>
  Hello = () =>
  {(() => {
    /*@pug:L2*/
    const foo = "bar";
    return (
      <>
        {" "}
        /*@pug:L3*/
        <div id={"bar"} className={"foo"}>
          {" "}
          /*@pug:L4*/
          <div className={["foo__node", "foo__node--aspect"].join(" ")}>
            Test
          </div>
        </div>
        {(() => {
          /*@pug:L5*/
          const bar = "baz";
          return (
            /*@pug:L6*/ <div className={"hello"}>{
              /*@pug:L7*/ \`Hello \\\${foo} \\\${bar}\`
            }</div>
          );
        })()}
      </>
    );
  })()}
</const>;
",
}
`;

exports[`Interpolated Code 1`] = `
{
  "line": 0,
  "nodes": [
    {
      "attributeBlocks": [],
      "attrs": [],
      "block": {
        "line": 1,
        "nodes": [
          {
            "column": 7,
            "line": 1,
            "type": "Text",
            "val": "Hello = () =>",
          },
          {
            "buffer": false,
            "column": 5,
            "isInline": false,
            "line": 2,
            "mustEscape": false,
            "type": "Code",
            "val": "const foo = "bar";",
          },
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 5,
                "line": 3,
                "mustEscape": false,
                "name": "id",
                "val": "'bar'",
              },
              {
                "column": 9,
                "line": 3,
                "mustEscape": false,
                "name": "class",
                "val": "'foo'",
              },
            ],
            "block": {
              "line": 3,
              "nodes": [
                {
                  "attributeBlocks": [],
                  "attrs": [
                    {
                      "column": 9,
                      "line": 4,
                      "mustEscape": false,
                      "name": "class",
                      "val": "'foo__node'",
                    },
                    {
                      "column": 19,
                      "line": 4,
                      "mustEscape": false,
                      "name": "class",
                      "val": "'foo__node--aspect'",
                    },
                    {
                      "column": 38,
                      "line": 4,
                      "mustEscape": true,
                      "name": "data-bar",
                      "val": ""baz"",
                    },
                  ],
                  "block": {
                    "line": 4,
                    "nodes": [
                      {
                        "buffer": true,
                        "column": 53,
                        "isInline": true,
                        "line": 4,
                        "mustEscape": true,
                        "type": "Code",
                        "val": "foo",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 4,
                  "name": "div",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 3,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 8,
                "line": 5,
                "mustEscape": false,
                "name": "class",
                "val": "'hello'",
              },
            ],
            "block": {
              "line": 5,
              "nodes": [
                {
                  "buffer": true,
                  "column": 9,
                  "isInline": false,
                  "line": 6,
                  "mustEscape": true,
                  "type": "Code",
                  "val": "\`Hello \\\${foo}\`",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 5,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "const",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Interpolated Code 2`] = `
{
  "errors": [],
  "result": "/*@pug:L1*/ <const>
  Hello = () =>
  {(() => {
    /*@pug:L2*/
    const foo = "bar";
    return (
      <>
        {" "}
        /*@pug:L3*/
        <div id={"bar"} className={"foo"}>
          {" "}
          /*@pug:L4*/
          <div
            data-bar={"baz"}
            className={["foo__node", "foo__node--aspect"].join(" ")}
          >
            {/*@pug:L4*/ foo}
          </div>
        </div>{" "}
        /*@pug:L5*/<div className={"hello"}>{/*@pug:L6*/ \`Hello \\\${foo}\`}</div>
      </>
    );
  })()}
</const>;
",
}
`;

exports[`Multiple children in nested block 1`] = `
{
  "line": 0,
  "nodes": [
    {
      "block": {
        "line": 2,
        "nodes": [
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 5,
                "line": 2,
                "mustEscape": false,
                "name": "id",
                "val": "'foo'",
              },
              {
                "column": 9,
                "line": 2,
                "mustEscape": false,
                "name": "class",
                "val": "'bar'",
              },
            ],
            "block": {
              "line": 2,
              "nodes": [
                {
                  "column": 11,
                  "line": 3,
                  "type": "Text",
                  "val": "Foo Bar",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 2,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 5,
                "line": 4,
                "mustEscape": false,
                "name": "id",
                "val": "'bar'",
              },
              {
                "column": 9,
                "line": 4,
                "mustEscape": false,
                "name": "class",
                "val": "'baz'",
              },
            ],
            "block": {
              "line": 4,
              "nodes": [
                {
                  "column": 11,
                  "line": 5,
                  "type": "Text",
                  "val": "Bar baz",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 4,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 1,
      "mustEscape": false,
      "type": "Code",
      "val": "const Foo = () =>",
    },
    {
      "block": {
        "line": 7,
        "nodes": [
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 5,
                "line": 7,
                "mustEscape": false,
                "name": "id",
                "val": "'foo'",
              },
              {
                "column": 9,
                "line": 7,
                "mustEscape": false,
                "name": "class",
                "val": "'bar'",
              },
              {
                "column": 13,
                "line": 7,
                "mustEscape": false,
                "name": "class",
                "val": "'baz'",
              },
            ],
            "block": {
              "line": 7,
              "nodes": [
                {
                  "column": 11,
                  "line": 8,
                  "type": "Text",
                  "val": "Foo Bar",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 7,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 5,
                "line": 9,
                "mustEscape": false,
                "name": "id",
                "val": "'bar'",
              },
              {
                "column": 9,
                "line": 9,
                "mustEscape": false,
                "name": "class",
                "val": "'baz'",
              },
            ],
            "block": {
              "line": 9,
              "nodes": [
                {
                  "column": 11,
                  "line": 10,
                  "type": "Text",
                  "val": "Bar baz",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 9,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 6,
      "mustEscape": false,
      "type": "Code",
      "val": "const Bar = () =>",
    },
    {
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 11,
      "mustEscape": false,
      "type": "Code",
      "val": "export default Foo",
    },
  ],
  "type": "Block",
}
`;

exports[`Multiple children in nested block 2`] = `
{
  "errors": [],
  "result": "/*@pug:L1*/
const Foo = () => {
  return (
    <>
      {" "}
      /*@pug:L2*/
      <div id={"foo"} className={"bar"}>
        Foo Bar
      </div>{" "}
      /*@pug:L4*/
      <div id={"bar"} className={"baz"}>
        Bar baz
      </div>
    </>
  );
};

/*@pug:L6*/
const Bar = () => {
  return (
    <>
      {" "}
      /*@pug:L7*/
      <div id={"foo"} className={["bar", "baz"].join(" ")}>
        Foo Bar
      </div>{" "}
      /*@pug:L9*/
      <div id={"bar"} className={"baz"}>
        Bar baz
      </div>
    </>
  );
};

/*@pug:L11*/
export default Foo;
",
}
`;

exports[`Pug inside arrow functions 1`] = `
{
  "line": 0,
  "nodes": [
    {
      "attributeBlocks": [],
      "attrs": [],
      "block": {
        "line": 1,
        "nodes": [
          {
            "column": 7,
            "line": 1,
            "type": "Text",
            "val": "HelloWorld = () =>",
          },
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 5,
                "line": 2,
                "mustEscape": false,
                "name": "id",
                "val": "'bar'",
              },
              {
                "column": 9,
                "line": 2,
                "mustEscape": false,
                "name": "class",
                "val": "'foo'",
              },
            ],
            "block": {
              "line": 2,
              "nodes": [
                {
                  "attributeBlocks": [],
                  "attrs": [
                    {
                      "column": 9,
                      "line": 3,
                      "mustEscape": false,
                      "name": "class",
                      "val": "'foo__node'",
                    },
                    {
                      "column": 19,
                      "line": 3,
                      "mustEscape": false,
                      "name": "class",
                      "val": "'foo__node--aspect'",
                    },
                    {
                      "column": 38,
                      "line": 3,
                      "mustEscape": true,
                      "name": "data-bar",
                      "val": ""baz"",
                    },
                  ],
                  "block": {
                    "line": 3,
                    "nodes": [
                      {
                        "column": 15,
                        "line": 4,
                        "type": "Text",
                        "val": "Hello world",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 3,
                  "name": "div",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 2,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "const",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Pug inside arrow functions 2`] = `
{
  "errors": [],
  "result": "/*@pug:L1*/ <const>
  HelloWorld = () => /*@pug:L2*/
  <div id={"bar"} className={"foo"}>
    {" "}
    /*@pug:L3*/
    <div
      data-bar={"baz"}
      className={["foo__node", "foo__node--aspect"].join(" ")}
    >
      Hello world
    </div>
  </div>
</const>;
",
}
`;

exports[`Pug inside old-school functions 1`] = `
{
  "line": 0,
  "nodes": [
    {
      "attributeBlocks": [],
      "attrs": [],
      "block": {
        "line": 1,
        "nodes": [
          {
            "column": 10,
            "line": 1,
            "type": "Text",
            "val": "HelloWorld(props: SomeProps)",
          },
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 5,
                "line": 2,
                "mustEscape": false,
                "name": "id",
                "val": "'bar'",
              },
              {
                "column": 9,
                "line": 2,
                "mustEscape": false,
                "name": "class",
                "val": "'foo'",
              },
            ],
            "block": {
              "line": 2,
              "nodes": [
                {
                  "attributeBlocks": [],
                  "attrs": [
                    {
                      "column": 9,
                      "line": 3,
                      "mustEscape": false,
                      "name": "class",
                      "val": "'foo__node'",
                    },
                    {
                      "column": 19,
                      "line": 3,
                      "mustEscape": false,
                      "name": "class",
                      "val": "'foo__node--aspect'",
                    },
                    {
                      "column": 38,
                      "line": 3,
                      "mustEscape": true,
                      "name": "data-bar",
                      "val": ""baz"",
                    },
                  ],
                  "block": {
                    "line": 3,
                    "nodes": [
                      {
                        "column": 15,
                        "line": 4,
                        "type": "Text",
                        "val": "Hello world",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 3,
                  "name": "div",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 2,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "function",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Pug inside old-school functions 2`] = `
{
  "errors": [],
  "result": "/*@pug:L1*/ <function>
  HelloWorld(props: SomeProps) /*@pug:L2*/
  <div id={"bar"} className={"foo"}>
    {" "}
    /*@pug:L3*/
    <div
      data-bar={"baz"}
      className={["foo__node", "foo__node--aspect"].join(" ")}
    >
      Hello world
    </div>
  </div>
</function>;
",
}
`;

exports[`Render props 1`] = `
{
  "line": 0,
  "nodes": [
    {
      "attributeBlocks": [],
      "attrs": [],
      "block": {
        "line": 1,
        "nodes": [
          {
            "column": 7,
            "line": 1,
            "type": "Text",
            "val": "Hello = () =>",
          },
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 15,
                "line": 2,
                "mustEscape": false,
                "name": "class",
                "val": "'Consumer'",
              },
            ],
            "block": {
              "line": 2,
              "nodes": [
                {
                  "block": {
                    "line": 4,
                    "nodes": [
                      {
                        "alternate": {
                          "line": 7,
                          "nodes": [
                            {
                              "attributeBlocks": [],
                              "attrs": [
                                {
                                  "column": 17,
                                  "line": 7,
                                  "mustEscape": false,
                                  "name": "id",
                                  "val": "'workspace'",
                                },
                              ],
                              "block": {
                                "line": 7,
                                "nodes": [
                                  {
                                    "column": 28,
                                    "line": 7,
                                    "type": "Text",
                                    "val": "Failure",
                                  },
                                ],
                                "type": "Block",
                              },
                              "column": 17,
                              "isInline": false,
                              "line": 7,
                              "name": "div",
                              "selfClosing": false,
                              "type": "Tag",
                            },
                          ],
                          "type": "Block",
                        },
                        "column": 13,
                        "consequent": {
                          "line": 5,
                          "nodes": [
                            {
                              "attributeBlocks": [],
                              "attrs": [
                                {
                                  "column": 17,
                                  "line": 5,
                                  "mustEscape": false,
                                  "name": "id",
                                  "val": "'workspace'",
                                },
                              ],
                              "block": {
                                "line": 5,
                                "nodes": [
                                  {
                                    "column": 28,
                                    "line": 5,
                                    "type": "Text",
                                    "val": "Success",
                                  },
                                ],
                                "type": "Block",
                              },
                              "column": 17,
                              "isInline": false,
                              "line": 5,
                              "name": "div",
                              "selfClosing": false,
                              "type": "Tag",
                            },
                          ],
                          "type": "Block",
                        },
                        "line": 4,
                        "test": "app.repositoryRoot",
                        "type": "Conditional",
                      },
                    ],
                    "type": "Block",
                  },
                  "buffer": true,
                  "column": 9,
                  "isInline": false,
                  "line": 3,
                  "mustEscape": true,
                  "type": "Code",
                  "val": "(app) =>",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 2,
            "name": "AppContext",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "const",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Render props 2`] = `
{
  "errors": [],
  "result": "/*@pug:L1*/ <const>
  Hello = () => /*@pug:L2*/
  <AppContext className={"Consumer"}>
    {
      /*@pug:L3*/ (app) =>
        /*@pug:L4*/ app.repositoryRoot ? (
          /*@pug:L5*/ <div id={"workspace"}>Success</div>
        ) : (
          /*@pug:L7*/ <div id={"workspace"}>Failure</div>
        )
    }
  </AppContext>
</const>;
",
}
`;

exports[`Sanitization of buffered code 1`] = `
{
  "line": 0,
  "nodes": [
    {
      "attributeBlocks": [],
      "attrs": [],
      "block": {
        "line": 1,
        "nodes": [
          {
            "column": 7,
            "line": 1,
            "type": "Text",
            "val": "Hello = () =>",
          },
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 5,
                "line": 2,
                "mustEscape": false,
                "name": "id",
                "val": "'bar'",
              },
              {
                "column": 9,
                "line": 2,
                "mustEscape": false,
                "name": "class",
                "val": "'foo'",
              },
            ],
            "block": {
              "line": 2,
              "nodes": [
                {
                  "buffer": true,
                  "column": 9,
                  "isInline": false,
                  "line": 3,
                  "mustEscape": true,
                  "type": "Code",
                  "val": "'<div>Hello</div>'",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 2,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "const",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Sanitization of buffered code 2`] = `
{
  "errors": [],
  "result": "/*@pug:L1*/ <const>
  Hello = () => /*@pug:L2*/
  <div id={"bar"} className={"foo"}>
    {/*@pug:L3*/ "<div>Hello</div>"}
  </div>
</const>;
",
}
`;

exports[`Unbuffered multiline code 1`] = `
{
  "line": 0,
  "nodes": [
    {
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 1,
      "mustEscape": false,
      "type": "Code",
      "val": "const obj = {
    a: 10,
    b: 20
}
",
    },
    {
      "attributeBlocks": [],
      "attrs": [],
      "block": {
        "line": 7,
        "nodes": [
          {
            "column": 7,
            "line": 7,
            "type": "Text",
            "val": "Hello = () =>",
          },
          {
            "attributeBlocks": [],
            "attrs": [
              {
                "column": 5,
                "line": 8,
                "mustEscape": false,
                "name": "id",
                "val": "'bar'",
              },
              {
                "column": 9,
                "line": 8,
                "mustEscape": false,
                "name": "class",
                "val": "'foo'",
              },
            ],
            "block": {
              "line": 8,
              "nodes": [
                {
                  "column": 14,
                  "line": 8,
                  "type": "Text",
                  "val": "= obj.a",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 8,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 7,
      "name": "const",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Unbuffered multiline code 2`] = `
{
  "errors": [],
  "result": "/*@pug:L1*/
const obj = {
  a: 10,
  b: 20,
};

/*@pug:L7*/ <const>
  Hello = () => /*@pug:L8*/
  <div id={"bar"} className={"foo"}>
    = obj.a
  </div>
</const>;
",
}
`;
